# fakeroot-rs

./: Cargo.toml  README.md
src/: lib.rs  loginshell.rs  main.rs
